Revamped CSS to try and address issues with contents spilling out of div

--- a/style.css
+++ b/style.css
@@ -1,140 +1,127 @@
-
 .main-container
 {
-  border:2px solid red;
+  border:1px solid black;
   dispaly:flex;
   flex-direction: column;
-  flex-wrap:nowrap;
   box-shadow: -10px 10px 100px 50px rgba(0, 0, 0, 0.2);
   width:auto;
-  margin-left:10%;
-  margin-right:10%;
+  height:auto;
+  margin:auto;
   background-color:#EAEAEA;
+  min-width:750px;
+  max-width:1080px;
 }
-.main-container .head
+.main-container .nav
 {
   background-color:#8ba4f7;
   display:flex;
-  flex-direction: column;
-  height:auto;
-
+  flex-direction:row;
+  justify-content: center;
+  height:75px;
+  width:100%;
 }
-.main-container .head .nav
+.main-container .nav div
 {
-  border:1px solid black;
-  display:flex;
-  flex-direction: row;
-  height:80px;
+
+  height:100%;
   width:auto;
+  margin:auto;
 }
-.main-container .head .nav .logo
-{
-  height:80px;
-  width:80px;
-}
-.main-container .head .nav .links
-{
-  text-align:center;
-  height: 80px;
-  width:85.5%;
-  margin-left:2%;
-}
-.main-container .head .body
+.main-container .nav .logo
 {
 
-  display:flex;
-  flex-direction: row;
-  width: 85%;
-  margin-left:7.5%;
+  height:100%;
+  width:auto;
+  display:block;
+}
+.logo-img
+{
+
+  width:100;
   height:100%;
 }
-.main-container .head .body .logo-large
+.nav-img
 {
-  border:2px solid red;
-  width:35%;
+  width: 100%;
+  height:100%;
+}
+.main-container .head
+{
+  border-bottom:1px solid black;
+  background-color:#8ba4f7;
+  display:flex;
+  flex-direction: row;
+  height:35%;
+  width:100%;
+  justify-content: flex-start;
+  padding-bottom:2%;
+}
+.main-container .head .logo-large
+{
+  margin-left:2%;
+  width:25%;
   height:auto;
 }
-.main-container .head .body .info
+.img-logo-large
 {
+  height:100%;
+  width:100%;
+}
+.main-container .head .info
+{
+
   display:flex;
   flex-direction: column;
   width:100%;
   height:100%;
+}
+.main-container .head .info .title
+{
 
+  width:100%;
+  height:50%;
 }
-.main-container .head .body .info .name
+.title-img
 {
   width:100%;
-  height:30%;
-  padding-top:5%;
+  height:100%;
 }
-.main-container .head .body .info .name .title
+.main-container .head .info .tagline
 {
-  margin-left:5%;
   width:100%;
+  height:50%;
+  text-align: center;
+  font-size:18pt;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+}
+.main-container .about, .donate
+{
+  padding-top:1%;
   height:auto;
-}
-
-.img-logo-largeead .body .info .tagline
-{
-  height:70%;
   width:100%;
 }
 .main-container .about
 {
-  box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.1);
-  background-color:#fdf8e0;
-  height:auto;
-  width:auto;
+    background-color:#fdf8e0;
 }
-.main-container .donate
-{
 
-  height:auto;
-  width:auto;
-}
-.main-container .location
+
+
+.post-title
 {
-  padding-top:10px;
-  background-color:#fdf8e0;
-  height:250px;
-  width:auto;
-}
-.img-logo
-{
-  height:80px;
-  width:auto;
-}
-.img-nav
-{
-  margin-left:10%;
-  height:100%;
-  width:auto;
-}
-.img-logo-large
-{
-  height:auto;
-  width:100%;
-}
-.tagline-style
-{
-  font-family: 'Roboto', sans-serif;
-  color:black;
-  text-align: center;
+  height:45px;
+  border-bottom: 2px solid black;
 }
 .post-style
 {
   width:80%;
-  margin-left:10%;
+  margin-left:5%;
   font-family: 'Roboto', sans-serif;
 }
-.post-title
+.mission-content, .donate-content
 {
-  height:60px;
-  border-bottom: 2px solid black;
-}
-.mission-content
-{
+
   display:flex;
   flex-direction: row;
   height:auto;
@@ -142,58 +129,31 @@
   margin-left:10%;
   padding-bottom:10px;
 }
-.mission-content div
-{
-  margin:auto;
-  margin-top:10px;
-  height:auto;
-  width:auto;
-}
-.mission-content .img
-{
-  border:1px solid black;
-  width:auto;
-  height:350px;
-}
-.donate-content
+.mission-content .post,
+.donate-content .post
 {
   display:flex;
-  flex-direction: row;
-  height:auto;
-  width:80%;
-  margin-left:10%;
-  padding-bottom:10px;
-}
-.donate-content div
-{
-  margin:auto;
-  margin-top:10px;
-  height:auto;
+  flex-direction:column;
+  height:100%;
   width:auto;
+  margin:auto;
+  padding:1%;
 }
-.donate-content .img
+.mission-content .post div, .donate-conent .post div
+{
+  width:100%;
+  height:100%;
+}
+.post-img
 {
   border:1px solid black;
-  width:auto;
-  height:350px;
+  width:100%;
+  height:100%;
 }
 
-#about-us
-{
-  font-family:sans-serif;
-  font-weight: bolder;
-  font-size: 36px;
-  text-align:center;
-}
-#donate
-{
-  margin-top:10px;
-  font-family:sans-serif;
-  font-weight: bolder;
-  font-size: 36px;
-  text-align:center;
-}
-#location
+
+
+#about-us, #donate
 {
   font-family:sans-serif;
   font-weight: bolder;
